--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="../src/style/style.css" />
-    <title>React App</title>
+    <title>SCI Foos360</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
